// Common messages for the Quartz API

syntax = "proto3";

package fcfsapi;

option go_package = "github.com/devsjc/fcfs/api/src/internal/models/fcfsapi;fcfsapi";

enum EnergySource {
  ENERGY_SOURCE_UNSPECIFIED = 0;
  ENERGY_SOURCE_SOLAR = 1;
  ENERGY_SOURCE_WIND = 2;
}

message Yield {
  int64 yield_kw = 1;
  int64 timestamp_unix = 2;
}


